- Fixed bug #43580 (removed bogus declaration of a non-existent php_is_url()
  function). (Ilia)
- Fixed bug #43533 (escapeshellarg('') returns null). (Ilia)
- Fixed bug #43527 (DateTime created from a timestamp reports environment
  timezone). (Derick)
- Fixed bug #43522 (stream_get_line() eats additional characters). (Felipe,
  Ilia, Tony)
- Fixed bug #43505 (Assign by reference bug). (Dmitry)
- Fixed bug #43497 (OCI8 XML/getClobVal aka temporary LOBs leak UGA memory).
  (Chris)
- Fixed bug #43495 (array_merge_recursive() crashes with recursive arrays).
  (Ilia)
- Fixed bug #43498 (file_exists() on a proftpd server got SIZE not
  allowed in ASCII mode). (Ilia, crrodriguez at suse dot de)
- Fixed bug #43493 (pdo_pgsql does not send username on connect when password
  is not available). (Ilia)
- Fixed bug #43491 (Under certain conditions, file_exists() never returns).
  (Dmitry)
- Fixed bug #43482 (array_pad() does not warn on very small pad numbers).
  (Ilia)
- Fixed bug #43457 (Prepared statement with incorrect parms doesn't throw
  exception with pdo_pgsql driver). (Ilia)
- Fixed bug #43450 (Memory leak on some functions with implicit object
  __toString() call). (David C.)
- Fixed bug #43386 (array_globals not reset to 0 properly on init). (Ilia)
- Fixed bug #43377 (PHP crashes with invalid argument for DateTimeZone). (Ilia)
- Fixed bug #43373 (pcntl_fork() should not raise E_ERROR on error). (Ilia)
- Fixed bug #43364 (recursive xincludes don't remove internal xml nodes
  properly). (Rob, patch from ddb@bitxtender.de)
- Fixed bug #43092 (curl_copy_handle() crashes with > 32 chars long URL).
  (Jani)
- Fixed bug #43301 (mb_ereg*_replace() crashes when replacement string is
  invalid PHP expression and 'e' option is used). (Jani)
- Fixed bug #43003 (Invalid timezone reported for DateTime objects constructed
  using a timestamp). (Derick)
- Fixed bug #43295 (crash because of uninitialized SG(sapi_headers).mimetype).
  (Dmitry)